[gd_scene load_steps=55 format=2]

[ext_resource path="res://characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://classes/DialogueResource.gd" type="Script" id=2]
[ext_resource path="res://characters/player/Lantern.gd" type="Script" id=3]
[ext_resource path="res://characters/player/sprites/player-sprites6.png" type="Texture" id=4]
[ext_resource path="res://characters/player/sprites/player-sprites33.png" type="Texture" id=5]
[ext_resource path="res://characters/player/sprites/player-sprites4.png" type="Texture" id=6]
[ext_resource path="res://characters/player/static.png" type="Texture" id=7]
[ext_resource path="res://characters/player/sprites/player-sprites22.png" type="Texture" id=8]
[ext_resource path="res://characters/player/sprites/player-sprites8.png" type="Texture" id=9]
[ext_resource path="res://characters/player/sprites/player-sprites12.png" type="Texture" id=10]
[ext_resource path="res://characters/player/sprites/player-sprites27.png" type="Texture" id=11]
[ext_resource path="res://characters/player/sprites/player-sprites36.png" type="Texture" id=12]
[ext_resource path="res://characters/player/sprites/player-sprites23.png" type="Texture" id=13]
[ext_resource path="res://characters/player/sprites/player-sprites34.png" type="Texture" id=14]
[ext_resource path="res://characters/player/sprites/player-sprites35.png" type="Texture" id=15]
[ext_resource path="res://characters/player/sprites/player-sprites9.png" type="Texture" id=16]
[ext_resource path="res://characters/player/sprites/player-sprites18.png" type="Texture" id=17]
[ext_resource path="res://characters/player/sprites/player-sprites30.png" type="Texture" id=18]
[ext_resource path="res://characters/player/sprites/player-sprites16.png" type="Texture" id=19]
[ext_resource path="res://characters/player/sprites/player-sprites38.png" type="Texture" id=20]
[ext_resource path="res://characters/player/sprites/player-sprites5.png" type="Texture" id=21]
[ext_resource path="res://characters/player/sprites/player-sprites3.png" type="Texture" id=22]
[ext_resource path="res://characters/player/sprites/player-sprites29.png" type="Texture" id=23]
[ext_resource path="res://characters/player/sprites/player-sprites11.png" type="Texture" id=24]
[ext_resource path="res://characters/player/sprites/player-sprites31.png" type="Texture" id=25]
[ext_resource path="res://characters/player/sprites/player-sprites37.png" type="Texture" id=26]
[ext_resource path="res://characters/player/sprites/player-sprites15.png" type="Texture" id=27]
[ext_resource path="res://characters/player/sprites/player-sprites2.png" type="Texture" id=28]
[ext_resource path="res://characters/player/sprites/player-sprites32.png" type="Texture" id=29]
[ext_resource path="res://characters/player/light2d.png" type="Texture" id=30]
[ext_resource path="res://characters/player/sprites/shadow.png" type="Texture" id=31]
[ext_resource path="res://characters/player/sprites/player-sprites14.png" type="Texture" id=32]
[ext_resource path="res://characters/player/sprites/player-sprites1.png" type="Texture" id=33]
[ext_resource path="res://characters/player/sprites/player-sprites26.png" type="Texture" id=34]
[ext_resource path="res://characters/player/sprites/player-sprites24.png" type="Texture" id=35]
[ext_resource path="res://characters/player/sprites/player-sprites25.png" type="Texture" id=36]
[ext_resource path="res://characters/player/wood_step1.wav" type="AudioStream" id=37]
[ext_resource path="res://characters/player/sprites/player-sprites7.png" type="Texture" id=38]
[ext_resource path="res://characters/player/sprites/player-sprites10.png" type="Texture" id=39]
[ext_resource path="res://characters/player/sprites/player-sprites13.png" type="Texture" id=40]
[ext_resource path="res://characters/player/sprites/player-sprites17.png" type="Texture" id=41]
[ext_resource path="res://characters/player/sprites/player-sprites20.png" type="Texture" id=42]
[ext_resource path="res://characters/player/lantern_light2d.png" type="Texture" id=43]
[ext_resource path="res://characters/player/sprites/player-sprites21.png" type="Texture" id=44]
[ext_resource path="res://characters/player/sprites/player-sprites28.png" type="Texture" id=45]
[ext_resource path="res://characters/player/sprites/player-sprites19.png" type="Texture" id=46]
[ext_resource path="res://characters/player/flicker.tres" type="Animation" id=47]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 45 ), ExtResource( 23 ), ExtResource( 18 ) ],
"loop": true,
"name": "move_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 6 ), ExtResource( 22 ), ExtResource( 28 ) ],
"loop": true,
"name": "move_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 41 ), ExtResource( 17 ), ExtResource( 46 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 40 ), ExtResource( 32 ), ExtResource( 27 ) ],
"loop": true,
"name": "move_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 4 ), ExtResource( 38 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 39 ), ExtResource( 24 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 34 ) ],
"loop": true,
"name": "move_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 29 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 26 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 11 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -8, -12, 8, -12, 8, 12, -8, 12 )

[sub_resource type="Resource" id=5]
script = ExtResource( 2 )
Text = [ "ran out of fuel shitass" ]
Answers = {

}
item_name = ""
item_quantity = 0
item_type = 0

[sub_resource type="Animation" id=6]
length = 15.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 5, 5.3, 5.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5, 5.2, 5.4, 5.6, 5.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=7]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"save",
]]
z_index = 3
collision_mask = 12
script = ExtResource( 1 )
deaccel = 0.4
speed = 20.0
walk_step_interval = 0.7
sprint_step_interval = 0.5

[node name="shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.152941 )
position = Vector2( -0.280609, 9.9643 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 31 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 2 )
animation = "idle_down"
frame = 1
playing = true

[node name="CollisionBox" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 0.0980392, 0.996078, 0.678431, 1 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource( 4 )

[node name="look_dir" type="RayCast2D" parent="."]
modulate = Color( 1, 0.447059, 0.203922, 1 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 15
collide_with_areas = true

[node name="Lantern" type="Node2D" parent="." groups=[
"save",
]]
position = Vector2( 1, 0 )
z_index = 3
script = ExtResource( 3 )
ran_out_of_fuel_resource = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="Lantern"]
position = Vector2( 359, 194.468 )
scale = Vector2( 1.25, 1.11429 )
texture = ExtResource( 43 )
offset = Vector2( -287.2, -120.367 )
texture_scale = 1.25
color = Color( 0.905882, 0.458824, 0.192157, 1 )
energy = 0.64
range_item_cull_mask = 3
shadow_enabled = true
shadow_gradient_length = 0.3
shadow_filter = 3
shadow_filter_smooth = 12.2
shadow_item_cull_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lantern/Light2D"]
anims/flicker = ExtResource( 47 )

[node name="SpotLight" type="Light2D" parent="Lantern"]
position = Vector2( -1.14441e-05, 3.8147e-06 )
scale = Vector2( 0.551843, 0.551843 )
texture = ExtResource( 30 )
texture_scale = 3.7
color = Color( 1, 0.886275, 0.666667, 1 )
energy = 0.64
shadow_enabled = true
shadow_filter = 3
shadow_filter_smooth = 12.2
shadow_item_cull_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lantern/SpotLight"]
anims/flicker = ExtResource( 47 )

[node name="awno" type="AnimationPlayer" parent="Lantern"]
anims/awcrap = SubResource( 6 )

[node name="Static" type="CanvasLayer" parent="Lantern"]
layer = 2

[node name="StaticAnim" type="Sprite" parent="Lantern/Static"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 69.9724, 34.4124 )
z_index = 10
z_as_relative = false
texture = ExtResource( 7 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lantern/Static"]
root_node = NodePath("../StaticAnim")
anims/static = SubResource( 7 )

[node name="Sounds" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Move" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2( 0, 12 )
stream = ExtResource( 37 )
volume_db = -18.0

[node name="StepTimer" type="Timer" parent="Sounds/Move"]
wait_time = 0.7
autostart = true
[connection signal="timeout" from="Sounds/Move/StepTimer" to="." method="_on_StepTimer_timeout"]
